--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -1378,8 +1378,8 @@ Services Style
 
 .services .icon img {
   margin-bottom: 10px;
-  max-width: 60px;
-  min-width: 60px;
+  max-width: 50px;
+  min-width: 50px;
 }
 
 .services .naccs .menu {
@@ -1409,7 +1409,7 @@ Services Style
 }
 
 .services .naccs .menu div.active {
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 15px rgb(255, 101, 219);
 }
 
 .services ul.nacc {
