Fix footer not clickable issue

--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -1502,7 +1502,7 @@ Free Quote
 */
 
 .free-quote {
-  background-image: url(../images/quote-bg.jpg);
+  background-image: url(../images/quote-bg-v2.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
