Add explainer video

--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -1064,6 +1064,11 @@ About Style
 --------------------------------------------- 
 */
 
+.about-us .section-heading {
+  text-align: center;
+  margin-bottom: 80px;
+}
+
 #about {
   padding-top: 130px;
 }
